kustomize/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-www
spec:
  redirectRegex:
    regex: ^https?://www.rtvjezakon.si/(.*)
    replacement: https://rtvjezakon.si/${1}
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rtvjezakon
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.middlewares: |
      traefik-redirect-to-https@kubernetescrd,
      rtvjezakon-redirect-www@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - rtvjezakon.si
        - www.rtvjezakon.si
      secretName: rtvjezakon-tls
  rules:
    - host: rtvjezakon.si
      http: &http_paths
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rtvjezakon
                port:
                  number: 80
    - host: www.rtvjezakon.si
      http: *http_paths
